added images and skillbuttonbar

--- a/src/components/style.css
+++ b/src/components/style.css
@@ -2,6 +2,30 @@
     position: fixed;
     bottom: 0;
     width: 100%;
-    height: 100px
+    height: 100px;
+}
+.skill.button {
+    padding: 0px 0px !important
 }
 
+.construction {
+    background: url(../images/construction.png);
+}
+.cooking {
+    background: url(../images/cooking.png);
+}
+.prayer {
+    background: url(../images/prayer.png);
+}
+.herblore {
+    background: url(../images/herblore.png);
+}
+.crafting {
+    background: url(../images/crafting.png);
+}
+.firemaking {
+    background: url(../images/firemaking.png);
+}
+.smithing {
+    background: url(../images/smithing.png);
+}
